# electricity-load-forecasting

./: .gitignore  README.md  config.py  experimental.ipynb  main.py  pyproject.toml
source/: config.py  data.py  data_utils.py  main_dev.py  map_utils.py  utils.py
source/backend/: server.py
source/backend/api/: __init__.py  geo_unit.py  load_data.py  weather.py
source/backend/data_clients/: entsoe.py
source/backend/service/data_clients/: asos.py  entsoe.py
source/backend/service/db/data_mappers/: geographical_unit_data_mappers.py  load_data_data_mappers.py  user_data_mappers.py  weather_data_mappers.py
source/backend/service/db/entities/: geographical_unit_entities.py  load_data_entities.py  user_entities.py  weather_entities.py
source/backend/service/db/models/: base.py  enums.py  geographical_unit.py  load_data.py  user.py  weather_data.py  weather_station.py
source/backend/service/db/repositories/: geographical_unit_repository.py  load_data_repository.py  user_repository.py  weather_repository.py
source/backend/service/utils/: get_db_session.py
source/ml/: __init__.py  experimental.ipynb
source/ml/components/: gated.py
source/ml/data/: pjm.py
source/ml/models/: temporal_fusion_transformer.py
source/ui/: app.py
source/utils/: data_utils.py
