[tool.poetry]
name = "electricity-load-forecasting"
version = "0.1.0"
description = "Electricity Load Forecasting"
authors = ["Bertan Günyel <bertan.gunyel@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11.3"
numpy = ">=1.26.3"
pandas = "^2.1.4"
scikit-learn = "^1.3.2"
torch = { url = "https://download.pytorch.org/whl/cu121/torch-2.1.2%2Bcu121-cp311-cp311-linux_x86_64.whl"}
torchaudio = { url = "https://download.pytorch.org/whl/cu121/torchaudio-2.1.2%2Bcu121-cp311-cp311-linux_x86_64.whl"}
torchvision = { url = "https://download.pytorch.org/whl/cu121/torchvision-0.16.2%2Bcu121-cp311-cp311-linux_x86_64.whl"}
tqdm = "^4.66.1"
pydantic-settings = "^2.2.1"
jupyter = "^1.0.0"
polars = ">=0.20.31"
matplotlib = "^3.9.0"
pyarrow = "^16.1.0"
folium = "^0.17.0"
fastapi = "^0.111.1"
streamlit = "^1.36.0"
pyopenssl = "^24.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
